--- a/projeto-aprenser/index.html
+++ b/projeto-aprenser/index.html
@@ -7,6 +7,77 @@
     <title>Aprenser</title>
 </head>
 <body>
-    
+    <header>
+        <img src="images/logoAprenser.png" alt="Logo do site">
+
+        <nav>
+            <ul>
+                <li>
+                    <a href="#">Cursos</a>
+                </li>
+                <li>
+                    <a href="#">Nossa escola</a>
+                </li>
+                <li>
+                    <a href="#">Contatos</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section>
+            <article>
+                <p>O saber é o que transforma nosso <span>ser</span></p>
+                <div>
+                    <a href="#">Saiba mais</a>
+                </div>
+                <img src="images/HeroImage.png" alt="">
+            </article>
+        </section>
+
+        <section>
+            <h2>Principais Cursos</h2>
+
+            <article>
+                <img src="images/curso-design.png" alt="Imagem ilustrativa do curso.">
+                <h3>Design para web</h3>
+                <p>O curso Design para Web é perfeito para aqueles que desejam aprender a criar designs atraentes e funcionais para sites e aplicativos móveis.</p>
+            </article>
+            <article>
+                <img src="images/curso-design-1.png" alt="Imagem ilustrativa do curso.">
+                <h3>Front End Developer</h3>
+                <p>Aprenda HTML, CSS e Javascript e crei interfaces ricas e semânticas para páginas web, aplicativos on-line ou até mesmo aplicações para aparelhos celulares</p>
+            </article>
+            <article>
+                <img src="images/curso-design-2.png" alt="Imagem ilustrativa do curso.">
+                <h3>Back End Developer</h3>
+                <p>Com este curso você vai dominar uma linguagem back-end a sua escolha, um sistema de banco de dados e aprenderá como funciona o protocolo HTTP na prática.</p>
+            </article>
+
+            <div>
+                <a href="#">Ver mais cursos</a>
+            </div>
+        </section>
+
+        <section>
+            <img src="images/nossa-escola.png" alt="Modelo feminina estudando com um notebook.">
+            <h2>Nossa Escola</h2>
+            <p>Aprenda habilidades tecnológicas em demanda e alcance seus objetivos de carreira com a nossa escola de tecnologia online. Oferecemos uma ampla gama de cursos online, desde programação e desenvolvimento de software até design gráfico e análise de dados. Nossos instrutores experientes fornecerão a você um ambiente de aprendizado interativo e de suporte para ajudá-lo a adquirir as habilidades necessárias para ter sucesso em sua carreira. Inscreva-se agora e comece sua jornada para se tornar um profissional de tecnologia bem-sucedido.</p>
+        </section>
+
+        <section>
+            <h2>Contatos</h2>
+            <img src="images/map.png" alt="Imagem da localização da sede Aprenser no google maps.">
+            <p>Av. da Liberdade, 1001</p>
+            <p>Tel.: +351 21 123 456</p>
+            <p>E-mail: contato@aprenser.com</p>              
+        </section>
+    </main>
+
+    <footer>
+        Design: Serliv.
+        Implementação: Breno Andrade.
+    </footer>
 </body>
 </html>
