adicionado arquivos de estilizacao

--- a/projeto-aprenser/index.html
+++ b/projeto-aprenser/index.html
@@ -5,6 +5,10 @@
     <meta name="author" content="Breno Andrade">
     <meta name="description" content="Esse projeto é minha solução desafio proposto na seção 9 do curso: Curso Web Frontend Fundamentos HTML5 CSS3 e JS + 10 Projetos.">
     <title>Aprenser</title>
+
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/footer.css">
 </head>
 <body>
     <header>
