adicionado classes ao header

--- a/projeto-aprenser/index.html
+++ b/projeto-aprenser/index.html
@@ -11,18 +11,18 @@
     <link rel="stylesheet" href="styles/footer.css">
 </head>
 <body>
-    <header>
-        <img src="images/logoAprenser.png" alt="Logo do site">
+    <header class="header">
+        <img class="header__logo" src="images/logoAprenser.png" alt="Logo do site">
 
-        <nav>
-            <ul>
-                <li>
+        <nav class="nav">
+            <ul class="nav__list">
+                <li class="nav__list-item">
                     <a href="#">Cursos</a>
                 </li>
-                <li>
+                <li class="nav__list-item">
                     <a href="#">Nossa escola</a>
                 </li>
-                <li>
+                <li class="nav__list-item">
                     <a href="#">Contatos</a>
                 </li>
             </ul>
