--- a/projeto-aprenser/index.html
+++ b/projeto-aprenser/index.html
@@ -29,7 +29,7 @@
         </nav>
     </header>
 
-    <main>
+    <main class="main">
         <section>
             <article>
                 <p>O saber é o que transforma nosso <span>ser</span></p>
@@ -79,9 +79,12 @@
         </section>
     </main>
 
-    <footer>
-        Design: Serliv.
-        Implementação: Breno Andrade.
+    <footer class="footer">
+        <p class="footer__content">Design: 
+            <a href="https://serliv.com/" target="_blank">Serliv</a>.</p>
+        <p class="footer__content">Implementação:
+            <a href="https://github.com/Breno-Andrade" target="_blank">Breno Andrade</a>.</p>
+        
     </footer>
 </body>
 </html>
