estilizado primeiro artigo da estrutura principal do site

--- a/projeto-aprenser/index.html
+++ b/projeto-aprenser/index.html
@@ -31,9 +31,9 @@
 
     <main class="main">
         <section>
-            <article>
-                <p>O saber é o que transforma nosso <span>ser</span></p>
+            <article class="first-article">
                 <div>
+                <h1>O saber é o que<br>transforma<br> nosso <span>ser</span></h1>
                     <a href="#">Saiba mais</a>
                 </div>
                 <img src="images/HeroImage.png" alt="">
