adicionado classes a secao de cursos

--- a/projeto-aprenser/index.html
+++ b/projeto-aprenser/index.html
@@ -33,7 +33,9 @@
         <section>
             <article class="first-article">
                 <div>
-                <h1>O saber é o que<br>transforma<br> nosso <span>ser</span></h1>
+                <h1>O saber é o que<br> 
+                    transforma <br>
+                    nosso <span>ser</span></h1>
                     <a href="#">Saiba mais</a>
                 </div>
                 <img src="images/HeroImage.png" alt="">
@@ -42,22 +44,55 @@
 
         <section>
             <h2>Principais Cursos</h2>
+            
+            <div class="cursos_container">
+                <article class="curso_card">
+                    <img class="curso_card__img"
+                        src="images/curso-design.png" 
+                        alt="Imagem ilustrativa.">
 
-            <article>
-                <img src="images/curso-design.png" alt="Imagem ilustrativa do curso.">
-                <h3>Design para web</h3>
-                <p>O curso Design para Web é perfeito para aqueles que desejam aprender a criar designs atraentes e funcionais para sites e aplicativos móveis.</p>
-            </article>
-            <article>
-                <img src="images/curso-design-1.png" alt="Imagem ilustrativa do curso.">
-                <h3>Front End Developer</h3>
-                <p>Aprenda HTML, CSS e Javascript e crei interfaces ricas e semânticas para páginas web, aplicativos on-line ou até mesmo aplicações para aparelhos celulares</p>
-            </article>
-            <article>
-                <img src="images/curso-design-2.png" alt="Imagem ilustrativa do curso.">
-                <h3>Back End Developer</h3>
-                <p>Com este curso você vai dominar uma linguagem back-end a sua escolha, um sistema de banco de dados e aprenderá como funciona o protocolo HTTP na prática.</p>
-            </article>
+                    <div class="curso-card__content">
+                        <h3 class="curso__title">
+                            Design para web
+                        </h3>
+                        <p class="curso__content">
+                            O curso Design para Web é perfeito para aqueles que desejam aprender a criar designs atraentes e funcionais para sites e aplicativos móveis.
+                        </p>
+                    </div>
+                </article>
+
+                <article class="curso_card">
+                    <img class="curso_card__img"
+                        src="images/curso-design-1.png"
+                        alt="Imagem ilustrativa.">
+
+                    <div class="curso-card__content">
+                        <h3 class="curso__title">
+                            Front End Developer
+                        </h3>
+                        <p class="curso__content">
+                            Aprenda HTML, CSS e Javascript e crie interfaces ricas e semânticas para páginas web, aplicativos on-line ou até mesmo aplicações para aparelhos celulares.
+                        </p>
+                    </div>
+                </article>
+
+                <article class="curso_card">
+                    <img class="curso_card__img"
+                        src="images/curso-design-2.png"
+                        alt="Imagem ilustrativa.">
+
+                    <div class="curso-card__content">
+                        <h3 class="curso__title">
+                            Back End Developer
+                        </h3>
+
+                        <p class="curso__content">
+                            Com este curso você vai dominar uma linguagem back-end a sua escolha, um sistema de banco de dados e aprenderá como funciona o protocolo HTTP na prática.
+                        </p>
+                    </div>
+                </article>
+                
+            </div>
 
             <div>
                 <a href="#">Ver mais cursos</a>
