finalizado secao de cursos html

--- a/projeto-aprenser/index.html
+++ b/projeto-aprenser/index.html
@@ -42,8 +42,10 @@
             </article>
         </section>
 
-        <section>
-            <h2>Principais Cursos</h2>
+        <section class="cursos-section">
+            <h2 class="cursos-section__title">
+                Principais Cursos
+            </h2>
             
             <div class="cursos_container">
                 <article class="curso_card">
