adicionado classes a secao contatos-section

--- a/projeto-aprenser/index.html
+++ b/projeto-aprenser/index.html
@@ -114,12 +114,23 @@
             </p>
         </section>
 
-        <section>
-            <h2>Contatos</h2>
-            <img src="images/map.png" alt="Imagem da localização da sede Aprenser no google maps.">
-            <p>Av. da Liberdade, 1001</p>
-            <p>Tel.: +351 21 123 456</p>
-            <p>E-mail: contato@aprenser.com</p>              
+        <section class="contatos-section">
+            <h2 class="contatos__title">
+                Contatos
+            </h2>
+            <img class="contatos_img"
+                src="images/map.png"
+                alt="Imagem da localização da sede Aprenser no google maps.">
+
+            <p class="contatos_content">
+                Av. da Liberdade, 1001
+            </p>
+            <p class="contatos_content">
+                Tel.: +351 21 123 456
+            </p>
+            <p class="contatos_content">
+                E-mail: contato@aprenser.com
+            </p>              
         </section>
     </main>
 
@@ -128,7 +139,7 @@
             <a href="https://serliv.com/" target="_blank">Serliv</a>.</p>
         <p class="footer__content">Implementação:
             <a href="https://github.com/Breno-Andrade" target="_blank">Breno Andrade</a>.</p>
-        
+    
     </footer>
 </body>
 </html>
