adicionado classes ao footer da pagina

--- a/projeto-aprenser/index.html
+++ b/projeto-aprenser/index.html
@@ -135,11 +135,21 @@
     </main>
 
     <footer class="footer">
-        <p class="footer__content">Design: 
-            <a href="https://serliv.com/" target="_blank">Serliv</a>.</p>
-        <p class="footer__content">Implementação:
-            <a href="https://github.com/Breno-Andrade" target="_blank">Breno Andrade</a>.</p>
-    
+        <p class="footer__content">
+            Design: 
+            <a class="footer-content__a"
+                href="https://serliv.com/"
+                target="_blank">
+                Serliv
+            </a>.
+        </p>
+        <p class="footer__content">
+            Implementação:
+            <a class="footer-content__a"
+                href="https://github.com/Breno-Andrade" target="_blank">
+                Breno Andrade
+            </a>.
+        </p>
     </footer>
 </body>
 </html>
