modificado classes da sesao banner-section

--- a/projeto-aprenser/index.html
+++ b/projeto-aprenser/index.html
@@ -30,15 +30,21 @@
     </header>
 
     <main class="main">
-        <section>
-            <article class="first-article">
-                <div>
-                <h1>O saber é o que<br> 
-                    transforma <br>
-                    nosso <span>ser</span></h1>
-                    <a href="#">Saiba mais</a>
+        <section class="banner-section">
+            <article class="banner">
+                <div class="banner__content">
+                    <h1 class="banner__title">
+                        O saber é o que<br> 
+                        transforma <br>
+                        nosso <span>ser</span>
+                    </h1>
+                    <a class="banner__a"  href="#">
+                        Saiba mais
+                    </a>
                 </div>
-                <img src="images/HeroImage.png" alt="">
+                <img class="banner__img" 
+                    src="images/HeroImage.png" 
+                    alt="Imagem do banner">
             </article>
         </section>
 
