adicionado divisao com largura maxima e centralizacao

--- a/projeto-aprenser/index.html
+++ b/projeto-aprenser/index.html
@@ -11,23 +11,25 @@
     <link rel="stylesheet" href="styles/footer.css">
 </head>
 <body>
-    <header class="header">
-        <img class="header__logo" src="images/logoAprenser.png" alt="Logo do site">
-
-        <nav class="nav">
-            <ul class="nav__list">
-                <li class="nav__list-item">
-                    <a href="#">Cursos</a>
-                </li>
-                <li class="nav__list-item">
-                    <a href="#">Nossa escola</a>
-                </li>
-                <li class="nav__list-item">
-                    <a href="#">Contatos</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+    <div class="header-container">
+        <header class="header max-width-center">
+            <img class="header__logo" src="images/logoAprenser.png" alt="Logo do site">
+    
+            <nav class="nav">
+                <ul class="nav__list">
+                    <li class="nav__list-item">
+                        <a href="#">Cursos</a>
+                    </li>
+                    <li class="nav__list-item">
+                        <a href="#">Nossa escola</a>
+                    </li>
+                    <li class="nav__list-item">
+                        <a href="#">Contatos</a>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+    </div>
 
     <main class="main">
         <section class="banner-section">
@@ -36,7 +38,7 @@
                     <h1 class="banner__title">
                         O saber é o que<br> 
                         transforma <br>
-                        nosso <span>ser</span>
+                        nosso <span class="title__span">ser</span>
                     </h1>
                     <a class="banner__a"  href="#">
                         Saiba mais
@@ -145,16 +147,12 @@
             Design: 
             <a class="footer-content__a"
                 href="https://serliv.com/"
-                target="_blank">
-                Serliv
-            </a>.
+                target="_blank">Serliv</a>.
         </p>
         <p class="footer__content">
             Implementação:
             <a class="footer-content__a"
-                href="https://github.com/Breno-Andrade" target="_blank">
-                Breno Andrade
-            </a>.
+                href="https://github.com/Breno-Andrade" target="_blank">Breno Andrade</a>.
         </p>
     </footer>
 </body>
