correcao de borda no meu de navegacao do header

--- a/projeto-aprenser/index.html
+++ b/projeto-aprenser/index.html
@@ -18,10 +18,10 @@
             <nav class="nav">
                 <ul class="nav__list">
                     <li class="nav__list-item">
-                        <a href="#">Cursos</a>
+                        <a href="#cursos">Cursos</a>
                     </li>
                     <li class="nav__list-item">
-                        <a href="#">Nossa escola</a>
+                        <a href="#">Nossa Escola</a>
                     </li>
                     <li class="nav__list-item">
                         <a href="#">Contatos</a>
