separado classes gerais e especificas em arquivos separados

--- a/projeto-aprenser/index.html
+++ b/projeto-aprenser/index.html
@@ -8,13 +8,16 @@
 
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/banner.css">
+    <link rel="stylesheet" href="styles/cursos.css">
+    <link rel="stylesheet" href="styles/escola.css">
+    <link rel="stylesheet" href="styles/contatos.css">
     <link rel="stylesheet" href="styles/footer.css">
 </head>
 <body>
-    <div class="header-container">
-        <header class="header max-width-center">
+    <div class="wrapper-container-dark wrapper-container-fixed ">
+        <header class="header container-max-width-center">
             <img class="header__logo" src="images/logoAprenser.png" alt="Logo do site">
-    
             <nav class="nav">
                 <ul class="nav__list">
                     <li class="nav__list-item">
@@ -31,7 +34,6 @@
         </header>
     </div>
 
-    <main class="main">
         <section class="banner-section">
             <article class="banner">
                 <div class="banner__content">
@@ -140,7 +142,7 @@
                 E-mail: contato@aprenser.com
             </p>              
         </section>
-    </main>
+    
 
     <footer class="footer">
         <p class="footer__content">
