adicionado classes de embrulho com estilizacoes

--- a/projeto-aprenser/index.html
+++ b/projeto-aprenser/index.html
@@ -15,8 +15,8 @@
     <link rel="stylesheet" href="styles/footer.css">
 </head>
 <body>
-    <div class="wrapper-container-dark wrapper-container-fixed ">
-        <header class="header container-max-width-center">
+    <div class="wrapper-container wrapper-container-dark wrapper-container-fixed">
+        <header class="header wrapper-container-max-width-center">
             <img class="header__logo" src="images/logoAprenser.png" alt="Logo do site">
             <nav class="nav">
                 <ul class="nav__list">
@@ -34,7 +34,8 @@
         </header>
     </div>
 
-        <section class="banner-section">
+    <div class="wrapper-container wrapper-container-gradient">
+        <section class="banner-section wrapper-container-max-width-center">
             <article class="banner">
                 <div class="banner__content">
                     <h1 class="banner__title">
@@ -51,8 +52,10 @@
                     alt="Imagem do banner">
             </article>
         </section>
+    </div>
 
-        <section class="cursos-section">
+    <div class="wrapper-container  wrapper-container-light wrapper-container-padded">
+        <section class="cursos-section wrapper-container-max-width-center">
             <h2 class="cursos-section__title">
                 Principais Cursos
             </h2>
@@ -110,8 +113,10 @@
                 <a href="#">Ver mais cursos</a>
             </div>
         </section>
+    </div>
 
-        <section class="escola-section">
+    <div class="wrapper-container  wrapper-container-dark2 wrapper-container-padded">
+        <section class="escola-section wrapper-container-max-width-center">
             <img class="escola__img" 
                 src="images/nossa-escola.png" 
                 alt="Modelo feminina estudando com um notebook.">
@@ -123,15 +128,17 @@
                 Aprenda habilidades tecnológicas em demanda e alcance seus objetivos de carreira com a nossa escola de tecnologia online. Oferecemos uma ampla gama de cursos online, desde programação e desenvolvimento de software até design gráfico e análise de dados. Nossos instrutores experientes fornecerão a você um ambiente de aprendizado interativo e de suporte para ajudá-lo a adquirir as habilidades necessárias para ter sucesso em sua carreira. Inscreva-se agora e comece sua jornada para se tornar um profissional de tecnologia bem-sucedido.
             </p>
         </section>
+    </div>
 
-        <section class="contatos-section">
+    <div class="wrapper-container  wrapper-container-light wrapper-container-padded">
+        <section class="contatos-section wrapper-container-max-width-center">
             <h2 class="contatos__title">
                 Contatos
             </h2>
             <img class="contatos_img"
                 src="images/map.png"
                 alt="Imagem da localização da sede Aprenser no google maps.">
-
+    
             <p class="contatos_content">
                 Av. da Liberdade, 1001
             </p>
@@ -142,20 +149,22 @@
                 E-mail: contato@aprenser.com
             </p>              
         </section>
+    </div>
     
-
-    <footer class="footer">
-        <p class="footer__content">
-            Design: 
-            <a class="footer-content__a"
-                href="https://serliv.com/"
-                target="_blank">Serliv</a>.
-        </p>
-        <p class="footer__content">
-            Implementação:
-            <a class="footer-content__a"
-                href="https://github.com/Breno-Andrade" target="_blank">Breno Andrade</a>.
-        </p>
-    </footer>
+    <div class="wrapper-container  wrapper-container-dark">
+        <footer class="footer">
+            <p class="footer__content">
+                Design: 
+                <a class="footer-content__a"
+                    href="https://serliv.com/"
+                    target="_blank">Serliv</a>.
+            </p>
+            <p class="footer__content">
+                Implementação:
+                <a class="footer-content__a"
+                    href="https://github.com/Breno-Andrade" target="_blank">Breno Andrade</a>.
+            </p>
+        </footer>
+    </div>
 </body>
 </html>
