estilizado secao banner e adicionado arquivos para as proximas secoes

--- a/projeto-aprenser/index.html
+++ b/projeto-aprenser/index.html
@@ -35,22 +35,19 @@
     </div>
 
     <div class="wrapper-container wrapper-container-gradient">
-        <section class="banner-section wrapper-container-max-width-center">
-            <article class="banner">
-                <div class="banner__content">
-                    <h1 class="banner__title">
-                        O saber é o que<br> 
-                        transforma <br>
-                        nosso <span class="title__span">ser</span>
-                    </h1>
-                    <a class="banner__a"  href="#">
-                        Saiba mais
-                    </a>
-                </div>
-                <img class="banner__img" 
-                    src="images/HeroImage.png" 
-                    alt="Imagem do banner">
-            </article>
+        <section class="banner wrapper-container-max-width-center">
+            <div class="banner__content">
+                <h1 class="banner__title">
+                    O saber é o que transforma nosso
+                    <span class="uppercase">ser</span>
+                </h1>
+                <a class="banner__a"  href="#">
+                    Saiba mais
+                </a>
+            </div>
+            <img class="banner__img" 
+                src="images/HeroImage.png" 
+                alt="Imagem do banner">
         </section>
     </div>
 
