adicionado ids para secoes

--- a/projeto-aprenser/index.html
+++ b/projeto-aprenser/index.html
@@ -24,10 +24,10 @@
                         <a href="#cursos">Cursos</a>
                     </li>
                     <li class="nav__list-item">
-                        <a href="#">Nossa Escola</a>
+                        <a href="#escola">Nossa Escola</a>
                     </li>
                     <li class="nav__list-item">
-                        <a href="#">Contatos</a>
+                        <a href="#contatos">Contatos</a>
                     </li>
                 </ul>
             </nav>
@@ -51,7 +51,7 @@
         </section>
     </div>
 
-    <div class="wrapper-container  wrapper-container-light wrapper-container-padded">
+    <div id="cursos" class="wrapper-container  wrapper-container-light wrapper-container-padded">
         <section class="cursos-section wrapper-container-max-width-center">
             <h2 class="cursos-section__title">
                 Principais Cursos
@@ -112,7 +112,7 @@
         </section>
     </div>
 
-    <div class="wrapper-container  wrapper-container-dark2 wrapper-container-padded">
+    <div id="escola" class="wrapper-container  wrapper-container-dark2 wrapper-container-padded">
         <section class="escola-section wrapper-container-max-width-center">
             <img class="escola__img" 
                 src="images/nossa-escola.png" 
@@ -127,7 +127,7 @@
         </section>
     </div>
 
-    <div class="wrapper-container  wrapper-container-light wrapper-container-padded">
+    <div id="contatos" class="wrapper-container  wrapper-container-light wrapper-container-padded">
         <section class="contatos-section wrapper-container-max-width-center">
             <h2 class="contatos__title">
                 Contatos
