--- a/projeto-aprenser/index.html
+++ b/projeto-aprenser/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Esse projeto é minha solução desafio proposto na seção 9 do curso: Curso Web Frontend Fundamentos HTML5 CSS3 e JS + 10 Projetos.">
     <title>Aprenser</title>
 
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/banner.css">
@@ -132,19 +133,12 @@
             <h2 class="contatos__title">
                 Contatos
             </h2>
-            <img class="contatos_img"
-                src="images/map.png"
-                alt="Imagem da localização da sede Aprenser no google maps.">
-    
-            <p class="contatos_content">
-                Av. da Liberdade, 1001
-            </p>
-            <p class="contatos_content">
-                Tel.: +351 21 123 456
-            </p>
-            <p class="contatos_content">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1293.0141299159577!2d-46.63926063326244!3d-23.561394566188962!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59a44cd7248d%3A0x8a2103e91837bd66!2sAv.%20da%20Liberdade%2C%201001%20-%20Liberdade%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2001503-001!5e0!3m2!1spt-BR!2sbr!4v1691685332810!5m2!1spt-BR!2sbr" width="100%" height="525" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <address>
+                Av. da Liberdade, 1001 <br>
+                Tel.: +351 21 123 456 <br>
                 E-mail: contato@aprenser.com
-            </p>              
+            </address>            
         </section>
     </div>
     
