inversao de cor primaria e secundaria nas variaveis

--- a/projeto-aprenser/index.html
+++ b/projeto-aprenser/index.html
@@ -36,13 +36,13 @@
     </div>
 
     <div class="wrapper-container wrapper-container-gradient">
-        <section class="banner wrapper-container-max-width-center">
+        <section class="banner
+        wrapper-container-max-width-center">
             <div class="banner__content">
-                <h1 class="banner__title">
-                    O saber é o que transforma nosso
+                <h1 class="banner__title">O saber é o que transforma nosso
                     <span class="uppercase">ser</span>
                 </h1>
-                <a class="banner__a"  href="#">
+                <a class="btn"  href="#">
                     Saiba mais
                 </a>
             </div>
