adicioando estilizacao da secao de cursos

--- a/projeto-aprenser/index.html
+++ b/projeto-aprenser/index.html
@@ -59,8 +59,8 @@
             </h2>
             
             <div class="cursos_container">
-                <article class="curso_card">
-                    <img class="curso_card__img"
+                <article class="curso-card">
+                    <img class="curso-card__img"
                         src="images/curso-design.png" 
                         alt="Imagem ilustrativa.">
 
@@ -74,8 +74,8 @@
                     </div>
                 </article>
 
-                <article class="curso_card">
-                    <img class="curso_card__img"
+                <article class="curso-card">
+                    <img class="curso-card__img"
                         src="images/curso-design-1.png"
                         alt="Imagem ilustrativa.">
 
@@ -89,8 +89,8 @@
                     </div>
                 </article>
 
-                <article class="curso_card">
-                    <img class="curso_card__img"
+                <article class="curso-card">
+                    <img class="curso-card__img"
                         src="images/curso-design-2.png"
                         alt="Imagem ilustrativa.">
 
@@ -108,7 +108,7 @@
             </div>
 
             <div>
-                <a href="#">Ver mais cursos</a>
+                <a class="btn section-btn" href="#">Ver mais cursos</a>
             </div>
         </section>
     </div>
