--- a/projeto-aprenser/index.html
+++ b/projeto-aprenser/index.html
@@ -119,12 +119,14 @@
                 src="images/nossa-escola.png" 
                 alt="Modelo feminina estudando com um notebook.">
 
-            <h2 class="escola__title">
-                Nossa Escola
-            </h2>
-            <p class="escola__content">
-                Aprenda habilidades tecnológicas em demanda e alcance seus objetivos de carreira com a nossa escola de tecnologia online. Oferecemos uma ampla gama de cursos online, desde programação e desenvolvimento de software até design gráfico e análise de dados. Nossos instrutores experientes fornecerão a você um ambiente de aprendizado interativo e de suporte para ajudá-lo a adquirir as habilidades necessárias para ter sucesso em sua carreira. Inscreva-se agora e comece sua jornada para se tornar um profissional de tecnologia bem-sucedido.
-            </p>
+            <div class="escola-content-wrapper">
+                <h2 class="escola__title">
+                    Nossa escola
+                </h2>
+                <p class="escola__content">
+                    Aprenda habilidades tecnológicas em demanda e alcance seus objetivos de carreira com a nossa escola de tecnologia online. Oferecemos uma ampla gama de cursos online, desde programação e desenvolvimento de software até design gráfico e análise de dados. Nossos instrutores experientes fornecerão a você um ambiente de aprendizado interativo e de suporte para ajudá-lo a adquirir as habilidades necessárias para ter sucesso em sua carreira. Inscreva-se agora e comece sua jornada para se tornar um profissional de tecnologia bem-sucedido.
+                </p>
+            </div>
         </section>
     </div>
 
